--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <a href="#"><div class="icon"><i class="bx bxl-discord"></i></div></a>
-             <h4 class="title"><a href="#">Join Our Community</a></h4>
+              <a href="https://discord.gg/fTs7d8yc"><div class="icon"><i class="bx bxl-discord"></i></div></a>
+             <h4 class="title"><a href="https://discord.gg/fTs7d8yc">Join Our Community</a></h4>
               <p class="description">Click the icon to join our Discord platform and become part of our vibrant community</p>
             </div>
           </div>
@@ -106,15 +106,15 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="bx bxl-github"></i></div>
-              <h4 class="title"><a href="">Check Out Our GitHub</a></h4>
+              <a href="https://github.com/Oche-Verse"><div class="icon"><i class="bx bxl-github"></i></div></a>
+              <h4 class="title"><a href="https://github.com/Oche-Verse">Check Out Our GitHub</a></h4>
               <p class="description">Explore our projects and contribute on GitHub by clicking the icon. Join our collaborative coding community and unleash your potential</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <a href="tel:+234567890"><div class="icon"><i class="bx bx-phone-call"></i></div></a>
+              <a href="tel:+2348138776065"><div class="icon"><i class="bx bx-phone-call"></i></div></a>
               <h4 class="title"><a href="tel:+2348138776065">Contact Us via Phone</a></h4>
               <p class="description">For direct communication, reach out to us via phone by clicking the icon. Our friendly team is ready to assist you promptly
 
@@ -194,7 +194,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>ocheverse@gmail.com</p>
             </div>
           </div>
 
@@ -202,7 +202,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+2348138776065</p>
+              <p>+234 813 877 6065</p>
             </div>
           </div>
 
@@ -224,10 +224,10 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
+            <h4>Embark on a Journey of Connection</h4>
             <p></p>
-            <form action="">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+            <form action="mailto:ocheverse@gmail.com">
+              <input type="email" name="email"><input type="submit" value="Reach out to us">
             </form>
           </div>
         </div>
