Update github link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <a href="https://github.com/Oche-Verse"><div class="icon"><i class="bx bxl-github"></i></div></a>
+              <a href="https://github.com/OcheVerse"><div class="icon"><i class="bx bxl-github"></i></div></a>
               <h4 class="title"><a href="https://github.com/OcheVerse">Check Out Our GitHub</a></h4>
               <p class="description">Explore our projects and contribute on GitHub by clicking the icon. Join our collaborative coding community and unleash your potential</p>
             </div>
