--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <a href="https://discord.gg/fTs7d8yc"><div class="icon"><i class="bx bxl-discord"></i></div></a>
-             <h4 class="title"><a href="https://discord.gg/fTs7d8yc">Join Our Community</a></h4>
-              <p class="description">Click the icon to join our Discord platform and become part of our vibrant community</p>
+              <a href="https://forms.office.com/e/wLguarqziR"><div class="icon"><i class="bx bxl-microsoft"></i></div></a>
+             <h4 class="title"><a href="https://forms.office.com/e/wLguarqziR">Join Our Community</a></h4>
+              <p class="description">Become part of our vibrant community by filling out our form</p>
             </div>
           </div>
 
@@ -106,17 +106,17 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <a href="https://github.com/OcheVerse"><div class="icon"><i class="bx bxl-github"></i></div></a>
-              <h4 class="title"><a href="https://github.com/OcheVerse">Check Out Our GitHub</a></h4>
+              <a href="https://github.com/Oche-Verse"><div class="icon"><i class="bx bxl-github"></i></div></a>
+              <h4 class="title"><a href="https://github.com/Oche-Verse">Check Out Our GitHub</a></h4>
               <p class="description">Explore our projects and contribute on GitHub by clicking the icon. Join our collaborative coding community and unleash your potential</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <a href="tel:+2348138776065"><div class="icon"><i class="bx bx-phone-call"></i></div></a>
-              <h4 class="title"><a href="tel:+2348138776065">Contact Us via Phone</a></h4>
-              <p class="description">For direct communication, reach out to us via phone by clicking the icon. Our friendly team is ready to assist you promptly
+              <a href="https://join.slack.com/share/enQtNTU2Mjg2MTM0MjI1Ny04NzU4MzI4MDAyN2EwMzQ5YmRhY2JmYjQwOWIxZDIwM2QyOWZjMjMzMmIwNWZmMjc5NGI1MWY5M2IxNTIyM2Fl"><div class="icon"><i class="bx bxl-slack"></i></div></a>
+              <h4 class="title"><a href="https://join.slack.com/share/enQtNTU2Mjg2MTM0MjI1Ny04NzU4MzI4MDAyN2EwMzQ5YmRhY2JmYjQwOWIxZDIwM2QyOWZjMjMzMmIwNWZmMjc5NGI1MWY5M2IxNTIyM2Fl">Join Our Slack Channel</a></h4>
+              <p class="description">Click the icon to join our community and become part of our vibrant community on Slack
 
               </p>
             </div>
@@ -267,4 +267,3 @@
 </body>
 
 </html>
-  
